fix; git commit -m fix;
git commit -m fix

--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -24,6 +24,9 @@
         "@unusedFunctionArgs": "false",
         "@warnLevel": "info"
     },
+    "python": {
+        "@version": "python2"
+    },
     "run": {
         "@path": "/.c9/runners",
         "configs": {
